# multiagent-radiology-report

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements_cpu.txt
.github/workflows/: ci.yml
agents/: clinical_context.py  image_analysis.py  orchestrator.py  qa_validation.py  report_drafting.py
api/: compliance.py  main.py
api/models/: __init__.py  database.py  report.py
api/routes/: compliance.py  health.py  pipeline.py  reports.py
infra/: main.tf  outputs.tf  prometheus.yml  supervisord.conf  variables.tf
mcp_server/: radiology_mcp.py
mlops/: ingest_medical_knowledge.py  tracking.py
pipeline/: dicom_loader.py  preprocessor.py  xai.py
ui/: app.py
